--- a/client/app.html
+++ b/client/app.html
@@ -17,6 +17,8 @@
   <meta name="msapplication-TileImage" content="ms-TileImage.png">
   <meta name="msapplication-TileColor" content="#28BE87">
   <meta name="msapplication-badge" content="frequency=1440; polling-uri=/ms-badge.xml">
+  <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:300,400,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,900' rel='stylesheet' type='text/css'>
 
 </head>
 
