--- a/client/app.html
+++ b/client/app.html
@@ -27,4 +27,29 @@
 
 <template name="layout">
   {{> yield}}
+  {{> footer}}
+  {{> logoSrc}}
+</template>
+
+<template name="footer"><footer class="applicationFooter">
+    <div class="footer-row">
+      <section class="about">
+        {{> logo}}
+        <div class="subtitle">About</div>
+        <p class="desc">Meteorpatterns.com is a resource covering interesting design patterns and insights for meteor development</p>
+
+        <a href="http://redandivory.com" target='_blank'  class="attribution inverse"><span class="icon-rni"></span> <span>Made by Red&Ivory</span></a>
+      </section>
+
+      <section class="join">
+        {{> logo}}
+        <div class="subtitle">Join in!</div>
+        <p class="desc">Contact me if you would like to publish on this platform.</p>
+        <div class="contact-info">
+          <a href="mailto:pieter.soudan@redandivory.be" target='_blank'>pieter.soudan@redandivory.be</a>
+          <a href="http://twitter.com/sewdn" class='twitter' target='_blank'>@sewdn</a>
+        </div>
+      </section>
+    </div>
+  </footer>
 </template>
