--- a/client/app.html
+++ b/client/app.html
@@ -42,12 +42,13 @@
       </section>
 
       <section class="join">
-        {{> logo}}
+        <a href="http://redandivory.com" target='_blank'>{{> rniLogo}}</a>
         <div class="subtitle">Join in!</div>
-        <p class="desc">Contact me if you would like to publish on this platform.</p>
+        <p class="desc">This platform is setup as a frontend for external content on github. Contact me if you would like to publish on this platform.</p>
         <div class="contact-info">
-          <a href="mailto:pieter.soudan@redandivory.be" target='_blank'>pieter.soudan@redandivory.be</a>
+          <a href="mailto:pieter.soudan@redandivory.be" target='_blank'>pieter.soudan@redandivory.be</a><br />
           <a href="http://twitter.com/sewdn" class='twitter' target='_blank'>@sewdn</a>
+          <br />
         </div>
       </section>
     </div>
