--- a/packages/mp:app-ui/head.html
+++ b/packages/mp:app-ui/head.html
@@ -1,5 +1,6 @@
 <head>
   <title>MeteorPatterns.com</title>
+  <meta name="fragment" content="!">
   <meta name="description" content="Design Pattens for meteor development">
   <meta name="language" content="en">
   <meta charset="utf-8">
